# repository-template

./: Build.rst  LICENSE  README.rst  setup.py
.github/workflows/: package-test.yml  package_test.yml
Documentation/: README.rst
Examples/: README.rst
Examples/Lab/: README.rst
Lab/: README.rst
PACKAGE-NAME/: README.rst  setup.cfg  setup.py  version.py
PACKAGE-NAME/scripts/: build_params.py  run_tests.sh
Tests/: README.rst  verifier.py
documentation/: README.rst
examples/: README.rst
scripts/: build_params.py  run_tests.sh  version.py
tests/: README.rst  verifier.py
