[metadata]
name = package-name
version = file: PACKAGE-NAME/version.txt
author = Bert Van Acker (B.MKR)
author_email = bva.bmkr@gmail.com
license = MIT Software License
description = PACKAGE-NAME description
keywords = raspberrypi, gpio, firmware
url = https://github.com/PACKAGE-NAME
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Software
    License :: OSI Approved :: MIT Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    # Versions are set to match latest versions distributed on pi-topOS
    # i.e. Debian Bullseye versions - https://packages.debian.org/bullseye/python/
    #############
    # Utilities #
    #############
    
include_package_data = True